minor changes and fixes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>My New Instagram Post</title>
+    <title>My Instagram Post</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
                 <div class="html"><img src="icons/html.svg" class="icon"></div>
                 <div class="user">
                     <p>HTML5</p>
-                    <p class="name">José Miguel</p></div>
+                    <p class="name">José Miguel Reyes</p></div>
             </div>
             <div class="second">
                 <img src="icons/puntos.svg" class="icon">
@@ -37,7 +37,7 @@
         </div>
         <div class="comment">
             <div class="liked">
-                <p>Liked by <strong>4GeeksAcademy, html5, Web</strong> and <strong>50,000 others</strong></p>
+                <p>Liked by <strong>4GeeksAcademy, HTML5, Web</strong> and <strong>23,984 others</strong></p>
             </div>
             <div class="myComment">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, distinctio voluptatem quos iusto
